fixed photo gap

--- a/src/Pages/EventFocused/style.scss
+++ b/src/Pages/EventFocused/style.scss
@@ -268,6 +268,7 @@
         width: 25vw;
         height: 25vw;
         object-fit: cover;
+        margin-top: 50px;
 
         @media (max-width: 992px) {
           width: 48%;
